fix: Gap issue fixed again + Drifitng Pixels Speed reduced as a Epilepsy Measure (May Require further precautions)

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ section:nth-child(odd) {
 
 canvas {
   position: fixed !important;
-  top: -5%;
+  top: 0%;
   left: 0;
   scroll-behavior: smooth;
   z-index: -5;
